#
# This file is protected by Copyright. Please refer to the COPYRIGHT file distributed with this 
# source distribution.
# 
# This file is part of REDHAWK Basic Components TuneFilterDecimate.
# 
# REDHAWK Basic Components TuneFilterDecimate is free software: you can redistribute it and/or modify it under the terms of 
# the GNU Lesser General Public License as published by the Free Software Foundation, either 
# version 3 of the License, or (at your option) any later version.
# 
# REDHAWK Basic Components TuneFilterDecimate is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
# PURPOSE.  See the GNU Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public License along with this 
# program.  If not, see http://www.gnu.org/licenses/.
#
 
ossieName = TuneFilterDecimate
bindir = $(prefix)/dom/components/TuneFilterDecimate/cpp/
bin_PROGRAMS = TuneFilterDecimate

xmldir = $(prefix)/dom/components/TuneFilterDecimate/
dist_xml_DATA = ../TuneFilterDecimate.prf.xml ../TuneFilterDecimate.scd.xml ../TuneFilterDecimate.spd.xml

distclean-local:
	rm -f config.*
	rm -rf autom4te.cache
	rm -f acinclude.m4
	rm -f aclocal.m4
	rm -f configure
	rm -f depcomp
	rm -f install-sh
	rm -f ltmain.sh
	rm -f Makefile.in
	rm -f missing
	rm -rf .deps

# Sources, libraries and library directories are auto-included from a file
# generated by the REDHAWK IDE. You can remove/modify the following lines if
# you wish to manually control these options.
include $(srcdir)/Makefile.am.ide
TuneFilterDecimate_SOURCES = $(redhawk_SOURCES_auto)
TuneFilterDecimate_CXXFLAGS = -Wall $(PROJECTDEPS_CFLAGS) $(BOOST_CPPFLAGS) $(INTERFACEDEPS_CFLAGS) $(redhawk_INCLUDES_auto) -I../../dsp/inc
TuneFilterDecimate_LDADD = $(PROJECTDEPS_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB) $(INTERFACEDEPS_LIBS) $(redhawk_LDADD_auto) -ldsp
TuneFilterDecimate_LDFLAGS = -Wall $(redhawk_LDFLAGS_auto) -L../../dsp/Release
